public/stylesheets/style.css
/*
	My Custome Stylesheet
	
*/

/* First, pull in Bootstrap's stylesheet */
@import url(bootstrap.css);
/* Now my custom styles */

body {
	padding-top: 60px;
    padding-bottom: 40px;
	font-family: "Lato", Helvetica, sans-serif;
	font-size: 14px;
	background-image:url(../images/cross_scratches.png);
}

.sidebar-nav {
       padding: 9px 0;
}

.sidebar-nav-fixed {
    padding: 9px 0;
    position:fixed;
    left:20px;
    top:60px;
    width:320px;
	margin-top: 25px;
}


h1{
	font-family: "Linden+Hill";
}

h2 {
	margin-top: 25px;
	margin-bottom: 10px;
	font-weight: 400;
	font-size: 32px;
	color:#00a950;
}

h3{
	font-weight: 300;
	margin-top: 10px;
}

h4,h6{
	font-weight: 300;
	color: #808080;
}

section{
	padding-top: 20px;
}

.hero-unit p{
	font-weight: 400;
}

.hero-unit h1{
	color: #00a950;
}

p{
	font-size: 14px;
}

.thumbnails{
	list-style: none;
}

.nav-tabs{
	background-color: #dfdfdf;
	  border: 1px solid #eee;
	  border: 1px solid rgba(0, 0, 0, 0.05);
	  -webkit-border-radius: 4px;
	  -moz-border-radius: 4px;
	  border-radius: 4px;
	  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
	  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
	  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
}

.footer{
	margin-top: 45px;
	padding: 35px 0 0;
	padding-top: 35px;
	padding-right: 0px;
	padding-left: 0px;
	border-top-width: 3px;
	border-top-style: solid;
	border-top-color: #00a950;
}

.footer p{
	font-size: 12px;
	color: #555;
}

